zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/labeled_block_continue.zig
export fn foo() void {
    const result: u32 = b: {
        continue :b 123;
    };
    _ = result;
}

// error
//
// :3:9: error: continue outside of loop or labeled switch expression
